@@ -1,3 +1,5 @@
+8/3/10 second pass at pH paper
+8/3/10 first pass at conductivity tester model
 8/2/10 first pass at pH paper (geometry and dragging)
 8/2/10 misc javadoc
 8/2/10 add model element for reaction equation
